[package]
name = "nested_router"
version = "0.2.0"
edition = "2021"
description = "Nested route-recognizers"
license = "MIT"
repository = "https://github.com/Banyc/nested_router"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
route-recognizer = "0.3.1"
